# win32-basic-launcher

./: CMakeLists.txt
res/: Project.xsd  UserConfiguation.xsd  resource.aps  resource.h  resource.rc
src/: clock.h  defines.c  launcher.h  launcher.hpp  main.c  main.cpp  project.cpp
