CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(SSLauncher)

ADD_DEFINITIONS(-DSS_CORE)

INCLUDE_DIRECTORIES($ENV{SS_INCLUDE_PATH})

SET(LOCAL_SOURCES_FILES
	src/main.c)

ADD_EXECUTABLE(SSLauncher
	${LOCAL_SOURCES_FILES}
)

TARGET_LINK_LIBRARIES(SSLauncher SSCore)

SET_TARGET_PROPERTIES(SSLauncher PROPERTIES LINK_FLAGS "/SUBSYSTEM:WINDOWS")

IF(SS_HAVE_OUTPUT_DIRECTORY)
	SET_TARGET_PROPERTIES(
		SSLauncher
		PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY $ENV{SS_BINARY_PATH}
		LIBRARY_OUTPUT_DIRECTORY $ENV{SS_BINARY_PATH}
		ARCHIVE_OUTPUT_DIRECTORY $ENV{SS_ARCHIVE_PATH}
		PDB_OUTPUT_DIRECTORY $ENV{SS_PDB_PATH}
		)
ENDIF(SS_HAVE_OUTPUT_DIRECTORY)
